2013-03-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to #12683: Make TS template constants selectable
	* Follow-up to #45862: Enable domain model extension: rebuild class cache when updating extensions
	* Remove unnecessary entries from ext_autoload.php
	* Fix layout of code generated by class cache builder

2013-03-14  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #12683: Make TS template constants selectable
	* Resolves #48197: Incorrect extension of the language domain model by language packs
	* Resolves #48198: Add methods to retrieve entities ordered by localized names

2013-03-13  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #48156: Add backend module to generate language packs
	* Resolves #48161: Localization should honour alternative languages
	* Resolves #48162: Make pibase-style api usable in backend
	* Resolves #48163: Add repository method to retrieve all non-constructed and non-sacred languages
	* Resolves #48164: Add repository method to retrieve all entities including deleted ones
	* Update version to 6.0.0
	* Simplify EM configuration template

2013-03-05  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #46051: Make the extension version and constraints available when creating language packs

2013-03-03  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #45986: Add domain repositories classes

2013-02-27  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #45901: Add extbase persistence configuration and field mapping
	* Follow-up to #45901: Add extbase persistence configuration and field mapping

2013-02-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #45862: Enable domain model extension
	* Resolves #45874: Move domain model extension configuration to Configuration directory
	* Follow-up to #45848: Add domain model

2013-02-25  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #45823: Remove hotlist feature
	* Resolves #45847: Move TCA arrays to Configuration directory
	* Resolves #45848: Add domain model
